fix(contacts): show header even when no contact selected on tablet/mobile

--- a/src/app/pages/contacts/contacts.scss
+++ b/src/app/pages/contacts/contacts.scss
@@ -40,8 +40,9 @@ app-contact-details {
   width: 100%;
   flex: 1;
 
-  &:not(:has(.contact-details__content)) {
-      display: none;
+   &:not(:has(.contact-details__content)) {
+      z-index: 0;
+      pointer-events: none;
     }
 }
 
